--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,20 @@ body {
 img {
   width: 100%;
 }
+a.back-btn {
+  text-decoration: none;
+}
+.back-btn {
+  position: absolute;
+  left: 20px;
+  top: 20px;
+  padding: 4px 12px;
+  background: #f74d00;
+  color: #fff;
+  border-radius: 5px;
+  font-size: 13px;
+  border: 1px solid #fff;
+}
 .our-review {
   max-width: 500px;
   text-align: center;
